Fixed Card widths when they're too small by setting a min-width like the rest of the Cards.

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,8 @@
 #card.card {
   box-shadow: 0 9px 54px -4px #e0e0e0;
   border-radius: 5px;
-  max-width: 360px;
+  max-width: 358px;
+  min-width: 358px;
   margin: 1rem;
   min-height: 374.8px;
 }
